--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,7 @@
 					<groupId>commons-io</groupId>
 					<artifactId>commons-io</artifactId>
 					<version>${commons-io.version}</version>
+					<scope>test</scope>
 				</dependency>
 				<dependency>
 					<groupId>junit</groupId>
