--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,7 @@
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-jdbc</artifactId>
 					<version>${spring.version}</version>
+					<scope>test</scope>
 				</dependency>
 				<dependency>
 					<groupId>org.springframework</groupId>
