--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,19 @@
 						</configuration>
 					</execution>
 				</executions>
+<dependencies>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-dependency-analyzer</artifactId>
+      <version>1.11.2</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>maven-project</artifactId>
+          <groupId>org.apache.maven</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+</dependencies>
 			</plugin>
 		</plugins>
 	</build>
