--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 		<archiver.copyright.lastyear>2020</archiver.copyright.lastyear>
 		<doclint.optappend>-Xdoclint:all -Xdoclint:-missing</doclint.optappend>
 		<!-- dependencies -->
-		<background-jobs.version>1.25</background-jobs.version>
+		<background-jobs.version>1.26-SNAPSHOT</background-jobs.version>
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
-		<csvfile.version>3.0</csvfile.version>
+		<csvfile.version>3.1-SNAPSHOT</csvfile.version>
 		<jackson.version>2.13.0</jackson.version>
 		<log4j.version>2.16.0</log4j.version>
 		<spring.version>4.3.30.RELEASE</spring.version>
