--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.evolvis.tartools</groupId>
 		<artifactId>maven-parent</artifactId>
-		<version>2.3-SNAPSHOT</version>
+		<version>2.3</version>
 	</parent>
 	<groupId>org.evolvis.tartools</groupId>
 	<artifactId>extract-tool</artifactId>
@@ -34,10 +34,10 @@
 		<archiver.copyright.lastyear>2020</archiver.copyright.lastyear>
 		<javadoc.doclint>all,-missing</javadoc.doclint>
 		<!-- dependencies -->
-		<background-jobs.version>1.26-SNAPSHOT</background-jobs.version>
+		<background-jobs.version>1.26</background-jobs.version>
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
-		<csvfile.version>3.1-SNAPSHOT</csvfile.version>
+		<csvfile.version>3.1</csvfile.version>
 		<jackson.version>2.13.1</jackson.version>
 		<log4j.version>2.17.1</log4j.version>
 		<spring.version>4.3.30.RELEASE</spring.version>
