--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 		<archiver.copyright.lastyear>2020</archiver.copyright.lastyear>
 		<javadoc.doclint>all,-missing</javadoc.doclint>
 		<!-- dependencies -->
-		<background-jobs.version>1.26</background-jobs.version>
+		<background-jobs.version>1.27-SNAPSHOT</background-jobs.version>
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
-		<csvfile.version>3.1</csvfile.version>
+		<csvfile.version>3.2-SNAPSHOT</csvfile.version>
 		<jackson.version>2.13.1</jackson.version>
 		<log4j.version>2.17.1</log4j.version>
 		<spring.version>4.3.30.RELEASE</spring.version>
