--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<csvfile.version>3.2-SNAPSHOT</csvfile.version>
-		<jackson.version>2.13.1</jackson.version>
+		<jackson.version>2.13.2</jackson.version>
+		<jackson.databind.version>2.13.2.2</jackson.databind.version>
 		<log4j.version>2.17.2</log4j.version>
 		<spring.version>4.3.30.RELEASE</spring.version>
 		<!-- see src/dist/example.sh -->
@@ -222,7 +223,7 @@
 				<dependency>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
-					<version>${jackson.version}</version>
+					<version>${jackson.databind.version}</version>
 				</dependency>
 				<!-- downstreams may exclude this dependency if they like; -->
 				<!-- not marked <optional /> to include by default -->
