--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.evolvis.tartools</groupId>
 	<artifactId>extract-tool</artifactId>
-	<version>1.18-SNAPSHOT</version>
+	<version>2.0</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Extract-Tool</description>
@@ -55,7 +55,7 @@
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/extract-tool.git</connection>
 		<developerConnection>scm:git:ssh://maven@evolvis.org/scmrepos/git/tartools/extract-tool.git</developerConnection>
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/extract-tool.git</url>
-		<tag>HEAD</tag>
+		<tag>extract-tool-2.0</tag>
 	</scm>
 	<build>
 		<resources>
