--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,10 @@
 		<archiver.copyright.lastyear>2022</archiver.copyright.lastyear>
 		<javadoc.doclint>all,-missing</javadoc.doclint>
 		<!-- dependencies -->
-		<background-jobs.version>1.27</background-jobs.version>
+		<background-jobs.version>1.28-SNAPSHOT</background-jobs.version>
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
-		<csvfile.version>3.2</csvfile.version>
+		<csvfile.version>3.3-SNAPSHOT</csvfile.version>
 		<jackson.version>2.13.2</jackson.version>
 		<jackson.databind.version>2.13.2.2</jackson.databind.version>
 		<log4j.version>2.17.2</log4j.version>
