add timestamp for reproducible builds

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<archiver.copyright.firstyear>2015</archiver.copyright.firstyear>
 		<archiver.copyright.lastyear>2022</archiver.copyright.lastyear>
 		<javadoc.doclint>all,-missing</javadoc.doclint>
-		<!-- dependencies -->
+		<!-- ‣ dependencies -->
 		<background-jobs.version>1.28-SNAPSHOT</background-jobs.version>
 		<commons-cli.version>1.5.0</commons-cli.version>
 		<commons-io.version>2.11.0</commons-io.version>
@@ -44,12 +44,14 @@
 		<spring.version>5.3.19</spring.version>
 		<!-- see src/dist/example.sh -->
 		<postgresql.version>42.3.4</postgresql.version>
-		<!-- testing -->
+		<!-- ‣ testing -->
 		<assertj.version>3.22.0</assertj.version>
 		<junit.version>4.13.2</junit.version>
 		<mockito.version>4.4.0</mockito.version>
-		<!-- maven plugins -->
+		<!-- ‣ maven plugins -->
 		<maven.owasp.dependency-check.version>9.1.0</maven.owasp.dependency-check.version>
+		<!-- ‣ release management -->
+		<project.build.outputTimestamp>1970-01-01T00:00:00Z</project.build.outputTimestamp>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/extract-tool.git</connection>
