--- a/pom.xml
+++ b/pom.xml
@@ -35,17 +35,17 @@
 		<javadoc.doclint>all,-missing</javadoc.doclint>
 		<!-- ‣ dependencies -->
 		<background-jobs.version>1.28-SNAPSHOT</background-jobs.version>
-		<commons-cli.version>1.5.0</commons-cli.version>
-		<commons-io.version>2.11.0</commons-io.version>
+		<commons-cli.version>1.7.0</commons-cli.version>
+		<commons-io.version>2.16.1</commons-io.version>
 		<csvfile.version>3.3-SNAPSHOT</csvfile.version>
-		<jackson.version>2.13.2</jackson.version>
-		<jackson.databind.version>2.13.2.2</jackson.databind.version>
-		<log4j.version>2.17.2</log4j.version>
-		<spring.version>5.3.19</spring.version>
+		<jackson.version>2.17.0</jackson.version>
+		<jackson.databind.version>${jackson.version}</jackson.databind.version>
+		<log4j.version>2.23.1</log4j.version>
+		<spring.version>5.3.34</spring.version>
 		<!-- see src/dist/example.sh -->
-		<postgresql.version>42.3.4</postgresql.version>
+		<postgresql.version>42.7.3</postgresql.version>
 		<!-- ‣ testing -->
-		<assertj.version>3.22.0</assertj.version>
+		<assertj.version>3.25.3</assertj.version>
 		<junit.version>4.13.2</junit.version>
 		<mockito.version>4.4.0</mockito.version>
 		<!-- ‣ maven plugins -->
