--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,7 @@
 					<groupId>commons-cli</groupId>
 					<artifactId>commons-cli</artifactId>
 					<version>${commons-cli.version}</version>
+					<scope>provided</scope>
 				</dependency>
 				<dependency>
 					<groupId>commons-io</groupId>
