--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.evolvis.tartools.maven-parent</groupId>
 		<artifactId>pom</artifactId>
-		<version>3.1-SNAPSHOT</version>
+		<version>3.1</version>
 	</parent>
 	<groupId>org.evolvis.tartools</groupId>
 	<artifactId>extract-tool</artifactId>
@@ -34,10 +34,10 @@
 		<archiver.copyright.lastyear>2022</archiver.copyright.lastyear>
 		<javadoc.doclint>all,-missing</javadoc.doclint>
 		<!-- ‣ dependencies -->
-		<background-jobs.version>1.28-SNAPSHOT</background-jobs.version>
+		<background-jobs.version>1.28</background-jobs.version>
 		<commons-cli.version>1.7.0</commons-cli.version>
 		<commons-io.version>2.16.1</commons-io.version>
-		<csvfile.version>3.3-SNAPSHOT</csvfile.version>
+		<csvfile.version>3.3</csvfile.version>
 		<jackson.version>2.17.1</jackson.version>
 		<jackson.databind.version>${jackson.version}</jackson.databind.version>
 		<log4j.version>2.23.1</log4j.version>
