--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	</parent>
 	<groupId>org.evolvis.tartools</groupId>
 	<artifactId>extract-tool</artifactId>
-	<version>2.1-SNAPSHOT</version>
+	<version>2.1</version>
 	<packaging>jar</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Extract-Tool</description>
@@ -51,13 +51,13 @@
 		<!-- ‣ maven plugins -->
 		<maven.owasp.dependency-check.version>9.1.0</maven.owasp.dependency-check.version>
 		<!-- ‣ release management -->
-		<project.build.outputTimestamp>1980-01-01T00:00:02Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2024-05-10T17:45:49Z</project.build.outputTimestamp>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/extract-tool.git</connection>
 		<developerConnection>scm:git:ssh://maven@evolvis.org/scmrepos/git/tartools/extract-tool.git</developerConnection>
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/extract-tool.git</url>
-		<tag>HEAD</tag>
+		<tag>extract-tool-2.1</tag>
 	</scm>
 	<build>
 		<plugins>
